--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -20,7 +20,13 @@ jobs:
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install Dependencies
 #       run: composer install
-      run: sudo composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+      run: php -r "if (hash_file('sha384', 'composer-setup.php') === 'a5c698ffe4b8e849a443b120cd5ba38043260d5c4023dbf93e1558871f1f07f58274fc6f4c93bcfd858c6bd0775cd8d1') { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
+    - name: Install Dependencies
+      run: php composer-setup.php
+    - name: Install Dependencies
+      run: php -r "unlink('composer-setup.php');"
+    - name: Install Dependencies
+      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
     - name: Generate key
       run: php artisan key:generate
     - name: Directory Permissions
