--- a/back/.env.example
+++ b/back/.env.example
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=dians-backend
+DB_USERNAME=dians-admin
+DB_PASSWORD=pass1234
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
