--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.1.3",
     "core-js": "^3.8.3",
     "leaflet": "^1.9.2",
+    "pinia": "^2.0.27",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
